# mongo-to-clickhouse-sink

./: Cargo.toml  README.md
src/: main.rs
